# Layout-GNN

./: .gitignore  README.md  pyproject.toml
data/: design_topics.csv  enrico_issues.csv  file_with_error.json  train_split.json
layout_gnn/: similarity_metrics.py  utils.py
layout_gnn/dataset/: collate.py  dataset.py  transformations.py  utils.py
layout_gnn/dataset/transforms/: core.py  image.py  np.py  nx.py  pyg.py
layout_gnn/lightning_module/: __init__.py  enc_dec.py  joint_embedding.py  lightning_module.py  simgrace.py
layout_gnn/model/: lightning_module.py  model.py
layout_gnn/nn/: encoder.py  model.py  neural_rasterizer.py  utils.py
layout_gnn/nn/loss/: __init__.py  simclr.py  vicreg.py
layout_gnn/pairwise_metrics/: core.py  ged.py  iou.py  ted.py
notebooks/: 0_dataset_eda.ipynb  1_ui_similarity.ipynb  2_layout_graph_model_example.ipynb  2_train_model.ipynb  3_evaluate_model.ipynb  4_baseline_distances.ipynb
scripts/: compute_pairwise_metrics.py  find_pairs.py  train.py  train.sh  train_simgrace.py
tests/: test_layout_gnn.py
train_configs/: enc_dec.yml  multimodal_ntxent.yml  multimodal_vicreg.yml  simgrace_ntxent.yml  simgrace_ntxent_gcn.yml  simgrace_vicreg.yml  simgrace_vicreg_gcn.yml  triplets_ged.yml  triplets_ged_rasterizer.yml  triplets_iou.yml  triplets_iou_rasterizer.yml
