[tool.poetry]
name = "layout-gnn"
version = "0.1.0"
description = ""
authors = ["SSamDav <ssam_dav@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
jupyterlab = "^3.3.4"
torch = "^1.11.0"
scikit-image = "^0.19.2"
networkx = "^2.8"
matplotlib = "^3.5.1"
torchvision = "^0.12.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
