[tool.poetry]
name = "layout-gnn"
version = "0.1.0"
description = ""
authors = ["SSamDav <ssam_dav@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.2"
jupyterlab = "^3.3.4"
torch = "^1.11.0"
scikit-image = "^0.19.2"
networkx = "^2.8"
matplotlib = "^3.5.1"
torchvision = "^0.12.0"
tqdm = "^4.64.0"
ipywidgets = "^7.7.0"
google-cloud-storage = "^2.3.0"
joblib = "^1.1.0"
torch-geometric = "^2.0.4"
class-resolver = "^0.3.9"
pytorch-lightning = "^1.6.1"
aim = "^3.8.1"
ipdb = "^0.13.9"
pymde = "^0.1.15"
PyYAML = "^6.0"
apted = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
